--- a/metadata.yaml
+++ b/metadata.yaml
@@ -25,5 +25,6 @@ subjects:
 - !lcc 'B'
 - !lcsh 'Psychology'
 - !lcsh 'Philosophy'
+- GITenberg
 title: Lectures on the Philosophy of the Human Mind (Vol. 1 of 3)
 url: http://www.gutenberg.org/ebooks/43116
